# Rubiks_Cube_Solver

./: BFSSolver.h  CMakeLists.txt  DFSSolver.h  GenericRubiksCube.cpp  GenericRubiksCube.h  IDAstarSolver.h  IDDFSSolver.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp  main.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
